<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@string/one"
        android:text="@string/one"/>

    <Button
        android:id="@string/two"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:text="@string/two"/>

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/three"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/four"
        android:layout_gravity="right"
        android:text="@string/four"/>
    <Button
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:id="@+id/five"
        android:text="@string/five"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/six"
        android:text="@string/six"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seven"
        android:text="@string/seven"/>

    <Button
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:id="@+id/eight"
        android:text="@string/eight"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine" />

        <Button
            android:id="@+id/ten"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="85dp"
            android:text="@string/ten"/>

        <Button
            android:id="@+id/eleven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:text="@string/twelve"/>

        <Button
            android:id="@+id/twelve"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/eleven"
            android:text="@string/eleven"/>

    </RelativeLayout>

</LinearLayout>